# AI-Powered-Doc

./: .gitignore  Dockerfile  README.md  fix_js.py  pyproject.toml  render.yaml  strip_3d.py
app/: __init__.py  analyzer.py  extractor.py  main.py
app/static/: app.js  index.html  style.css
