[project]
name = "docmind"
version = "0.1.0"
description = "DocMind AI — AI-powered document analysis platform"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "python-multipart>=0.0.9",
    "groq>=0.9.0",
    "pymupdf>=1.24.3",
    "pdfplumber>=0.11.0",
    "python-docx>=1.1.2",
    "pytesseract>=0.3.10",
    "pillow>=10.3.0",
    "python-dotenv>=1.2.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

